# densitometer-desktop

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-desktop.yml
assets/: densitometer.qrc
deploy/: updates.json
deploy/macOS/: Info.plist
deploy/windows/nsis/: setup.nsi
desktop/: CMakeLists.txt
desktop/src/: calibrationbaselinetab.cpp  calibrationbaselinetab.h  calibrationbaselinetab.ui
src/: calibrationbaselinetab.cpp  calibrationbaselinetab.h  calibrationsticktab.cpp  calibrationsticktab.h  calibrationsticktab.ui  calibrationtab.cpp  calibrationtab.h  calibrationuvvistab.cpp  calibrationuvvistab.h  calibrationuvvistab.ui  connectdialog.cpp  connectdialog.h  denscalvalues.cpp  denscalvalues.h  denscommand.cpp  denscommand.h  densinterface.cpp  densinterface.h  densistickinterface.cpp  densistickinterface.h  densistickreading.h  densistickrunner.cpp  densistickrunner.h  densisticksettings.cpp  densisticksettings.h  diagnosticstab.cpp  diagnosticstab.h  diagnosticstab.ui  floatitemdelegate.cpp  floatitemdelegate.h  ft260.cpp  ft260.h  ft260deviceinfo.cpp  ft260deviceinfo.h  ft260hidapi.cpp  ft260hidapi.h  ft260libusb.cpp  ft260libusb.h  gaincalibrationdialog.cpp  gaincalibrationdialog.h  (+48 more)
src/densistick/: densistickinterface.cpp  densistickinterface.h  densistickreading.cpp  densistickrunner.cpp  densistickrunner.h  densisticksettings.cpp  densisticksettings.h  ft260.h  ft260deviceinfo.h  ft260deviceinfo_p.h  ft260hidapi.h  m24c08.h  peripheralcalvalues.cpp  peripheralcalvalues.h  tsl2585.cpp  tsl2585.h  tsl2585calibration.cpp
